{
    "name": "InputActions",
    "maps": [
        {
            "name": "Menu",
            "id": "b7b7e075-0000-4b84-af7d-49ba447cfe18",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "bdebfa20-7922-426c-8be0-acb41cfeeaaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "fa3f103b-8a06-47eb-8d03-91cf3f16819e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35fc703b-8bac-47d7-be30-f75734aaa7d6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "339147cf-1ef2-48d0-9630-87e2eca1866e",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "a2bb38cc-41b6-4ffb-8d52-25289e471230",
            "actions": [
                {
                    "name": "CameraGrab",
                    "type": "Button",
                    "id": "c7bbea6c-6704-4973-bbf9-5e0386f831ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "5ef0ee42-6261-41c3-9148-f13fe054d93c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LeftMouseButtonReleased",
                    "type": "Button",
                    "id": "e7696ba5-e463-4f56-8afa-059903523c49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ca7f5320-aa93-4da3-b9e8-a8680a601245",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "8927bddb-3c71-470b-a31d-e017f2b9fa43",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71a8e467-3532-4fb0-a8b8-0dcd05f80f58",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "CameraGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dfe184f-3d31-4b40-a49e-51e62395e9ea",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "CameraGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2ddbdb2-3eaa-43b2-8a1b-9aff0935cc51",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbf3d026-3dab-448e-be7e-f02595599e75",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f31b7f3d-d2be-41b4-af6f-9f8e9f7f891c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "212dff35-cc0d-432c-931d-53cb5f33eda0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "80d14913-ce3b-44a8-b1ea-54f351c1dd8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a5dfa689-89e2-4e79-90ef-5c0067c5bd01",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab9947e4-1925-4125-99a6-5f12d8f159ac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c510bfe4-f378-4fc9-aff0-a2399947b771",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "LeftMouseButtonReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}